--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -604,7 +604,7 @@ function solicitarCantidadYAgregar(prod) {
 }
 
 
-// 🔎 Búsqueda en vivo y por código de barras
+// 🔎 Búsqueda en vivo (auto cantidad para códigos exactos)
 $("#buscador").addEventListener("input", () => {
   const val = $("#buscador").value.trim().toLowerCase();
   const cont = $("#resultados");
@@ -615,12 +615,11 @@ $("#buscador").addEventListener("input", () => {
     return;
   }
 
-  // 1️⃣ Buscar coincidencia exacta por código de barras
+  // 1️⃣ Si coincide código exacto (de lector o manual)
   const idByCode = codeIndex.get(val);
   if (idByCode) {
     const prod = catalogo.find(x => x.id === idByCode);
     if (prod) {
-      // Si coincide código exacto, pedir cantidad automáticamente
       let cantidadStr = prompt("Cantidad:", "1");
       if (cantidadStr !== null) {
         cantidadStr = cantidadStr.replace(",", ".");
@@ -635,24 +634,20 @@ $("#buscador").addEventListener("input", () => {
           $("#buscador").focus();
           return;
         }
-      } else {
-        $("#buscador").focus();
-        return;
       }
     }
   }
 
-  // 2️⃣ Búsqueda parcial o por nombre (igual que antes)
+  // 2️⃣ Si no hay coincidencia exacta, buscar por nombre o palabra
   const res = buscarLocal(val);
 
   if (res.length === 0) {
-    // Si no hay coincidencias, mostrar aviso
     cont.innerHTML = `<div class="result-item" style="color:red;text-align:center;">Código no identificado</div>`;
     cont.style.display = "block";
     return;
   }
 
-  // Mostrar lista de coincidencias por nombre
+  // 3️⃣ Mostrar resultados por palabra (sin cambios)
   cont.innerHTML = res.slice(0, 20).map(
     (p, i) => `
       <div class="result-item" data-id="${p.id}" data-index="${i}">
@@ -660,8 +655,8 @@ $("#buscador").addEventListener("input", () => {
         <small>${p.codigo}</small>
       </div>`
   ).join("");
-
   cont.style.display = "block";
+
   cont.querySelectorAll(".result-item").forEach(el => {
     el.onclick = () => {
       const id = el.dataset.id;
