--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -603,21 +603,38 @@ function solicitarCantidadYAgregar(prod) {
   $("#buscador").focus();
 }
 
-
-// 🔎 Búsqueda en vivo (auto cantidad para códigos exactos)
+// 🔎 Búsqueda en vivo (auto cantidad + beep al escanear)
 $("#buscador").addEventListener("input", () => {
   const val = $("#buscador").value.trim().toLowerCase();
   const cont = $("#resultados");
-
   if (!val) {
     cont.style.display = "none";
     cont.innerHTML = "";
     return;
   }
 
-  // 1️⃣ Si coincide código exacto (de lector o manual)
+  // 🎵 Función beep simple (frecuencia configurable)
+  function beep(frequency = 1000, duration = 120) {
+    try {
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const osc = ctx.createOscillator();
+      const gain = ctx.createGain();
+      osc.connect(gain);
+      gain.connect(ctx.destination);
+      osc.type = "sine";
+      osc.frequency.value = frequency;
+      osc.start();
+      gain.gain.setValueAtTime(0.2, ctx.currentTime);
+      osc.stop(ctx.currentTime + duration / 1000);
+    } catch (err) {
+      console.warn("No se pudo reproducir beep:", err);
+    }
+  }
+
+  // 1️⃣ Intentar coincidencia exacta (escaneo directo)
   const idByCode = codeIndex.get(val);
   if (idByCode) {
+    beep(1200); // ✅ Beep agudo si lo encontró
     const prod = catalogo.find(x => x.id === idByCode);
     if (prod) {
       let cantidadStr = prompt("Cantidad:", "1");
@@ -638,10 +655,11 @@ $("#buscador").addEventListener("input", () => {
     }
   }
 
-  // 2️⃣ Si no hay coincidencia exacta, buscar por nombre o palabra
+  // 2️⃣ Búsqueda por texto o código desconocido
   const res = buscarLocal(val);
 
   if (res.length === 0) {
+    beep(600); // ⚠️ Beep grave si no se encuentra
     cont.innerHTML = `<div class="result-item" style="color:red;text-align:center;">Código no identificado</div>`;
     cont.style.display = "block";
     return;
@@ -662,6 +680,7 @@ $("#buscador").addEventListener("input", () => {
       const id = el.dataset.id;
       const prod = catalogo.find(x => x.id === id);
       if (prod) {
+        beep(1200); // Beep al seleccionar producto manual
         solicitarCantidadYAgregar(prod);
         cont.style.display = "none";
       }
