--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -635,6 +635,68 @@ function solicitarCantidadYAgregar(prod) {
     if (e.key === "Enter") confirmar();
   });
 }
+/* ===========================================================
+   🔎 RESTAURAR BÚSQUEDA POR CÓDIGO Y NOMBRE
+   =========================================================== */
+const buscador = document.getElementById("buscador");
+const resultadosDiv = document.getElementById("resultados");
+
+// 🔍 Buscar al presionar ENTER
+buscador.addEventListener("keydown", e => {
+  if (e.key === "Enter") {
+    e.preventDefault();
+    const texto = buscador.value.trim();
+    if (!texto) return;
+
+    const resultados = buscarLocal(texto);
+
+    // 🎵 Beep al encontrar o error
+    const beep = (freq = 800) => {
+      try {
+        const ctx = new (window.AudioContext || window.webkitAudioContext)();
+        const osc = ctx.createOscillator();
+        const gain = ctx.createGain();
+        osc.connect(gain); gain.connect(ctx.destination);
+        osc.type = "sine"; osc.frequency.value = freq;
+        gain.gain.setValueAtTime(0.15, ctx.currentTime);
+        osc.start(); osc.stop(ctx.currentTime + 0.12);
+      } catch (err) {}
+    };
+
+    if (resultados.length === 1) {
+      beep(900);
+      seleccionarProducto(resultados[0]);
+      resultadosDiv.style.display = "none";
+    } else if (resultados.length > 1) {
+      // Mostrar lista si hay más de un resultado
+      resultadosDiv.innerHTML = "";
+      resultados.forEach(p => {
+        const item = document.createElement("div");
+        item.className = "result-item";
+        item.innerHTML = `
+          <span>${p.nombre}</span>
+          <small>${money(p.precioPublico)}</small>
+        `;
+        item.addEventListener("click", () => {
+          beep(900);
+          seleccionarProducto(p);
+          resultadosDiv.style.display = "none";
+        });
+        resultadosDiv.appendChild(item);
+      });
+      resultadosDiv.style.display = "block";
+    } else {
+      beep(500); // No encontrado
+      resultadosDiv.innerHTML = "<div style='padding:10px;color:#999'>Sin coincidencias</div>";
+      resultadosDiv.style.display = "block";
+    }
+  }
+});
+
+// Ocultar resultados al escribir algo nuevo
+buscador.addEventListener("input", () => {
+  resultadosDiv.style.display = "none";
+});
 
 /* ===========================================================
    💳 SECCIÓN 11: MODAL DE COBRO Y DESCUENTO DINÁMICO
