--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -321,8 +321,19 @@
   </div> <!-- /modal-card -->
 </div> <!-- /modalCobro -->
 
-<script type="module">
+<script type="text/javascript">
 "use strict";
+
+// ⚠️ Cargar módulos Firebase con import dinámico (compatible móviles)
+(async () => {
+  const { initializeApp } = await import("https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js");
+  const { 
+    getFirestore, collection, addDoc, setDoc, serverTimestamp,
+    runTransaction, doc, getDocs, query, where, limit 
+  } = await import("https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js");
+  const { enableIndexedDbPersistence } = await import("https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js");
+  const { obtenerUbicacionRobusta } = await import("./geoHelper.js");
+
 // ⚙️ BLOQUE 5: SCRIPT PRINCIPAL (FIREBASE + LÓGICA POS)
 
 /* ===========================================================
