--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -697,61 +697,107 @@ buscador.addEventListener("input", () => {
 });
 
 /* ===========================================================
-   💳 SECCIÓN 11: MODAL DE COBRO Y DESCUENTO DINÁMICO
+   💳 SECCIÓN 11: MODAL DE COBRO CON AUTORIZACIÓN DE DESCUENTO
    =========================================================== */
-const modalCobro=$("#modalCobro");
-const descuentoInput=$("#descuentoInput");
-const descuentoMonto=$("#descuentoMonto");
-const cobroTotal=$("#cobroTotal");
+const modalCobro = $("#modalCobro");
+const cobroTotal = $("#cobroTotal");
+const montoRecibido = $("#montoRecibido");
+const montoCambio = $("#montoCambio");
+const descuentoInfo = $("#descuentoInfo");
+const descuentoResumen = $("#descuentoResumen");
 
-function abrirCobro(){
-  if(carrito.length===0){alert("Agrega productos");return;}
-  document.body.classList.add("modal-open");
-  const descGuardado=Number(localStorage.getItem("desc_porcentaje")||0);
-  descuentoInput.value=descGuardado;
-  const tot=calcularTotales(descGuardado);
-  cobroTotal.textContent=money(tot.total);
-  descuentoMonto.textContent=`Descuento aplicado: ${money(tot.descuento)}`;
-  modalCobro.style.display="flex";
+let descuentoAutorizado = 0;
+
+function abrirCobro() {
+  if (carrito.length === 0) {
+    alert("Agrega productos antes de cobrar.");
+    return;
+  }
+
+  const tot = calcularTotales(0);
+  cobroTotal.textContent = money(tot.total);
+  montoRecibido.value = "";
+  montoCambio.textContent = "$0.00";
+  descuentoInfo.style.display = "none";
+  descuentoAutorizado = 0;
+
+  modalCobro.style.display = "flex";
   $("#montoRecibido").focus();
 }
 
-function cerrarCobro(){
-  $("#montoRecibido").value="";
-  $("#montoCambio").textContent="$0.00";
-  $("#notasCobro").value="";
-  $("#descuentoInput").value=0;
-  $("#descuentoMonto").textContent="Descuento aplicado: $0.00";
-  modalCobro.style.display="none";
-  document.body.classList.remove("modal-open");
+function cerrarCobro() {
+  modalCobro.style.display = "none";
+  descuentoAutorizado = 0;
 }
+
 $("#btnCobrar").onclick = abrirCobro;
 $("#btnCancelarCobro").onclick = cerrarCobro;
 
-// 📊 Botón para abrir resumen diario
-$("#btnResumen").addEventListener("click",()=>{window.location.href="resumen.html";});
-
-// 🧮 Descuento dinámico en vivo
-descuentoInput.addEventListener("input",()=>{
-  let val=parseInt(descuentoInput.value)||0;
-  if(val<0)val=0;if(val>100)val=100;
-  descuentoInput.value=val;
-  localStorage.setItem("desc_porcentaje",val);
-  const t=calcularTotales(val);
-  cobroTotal.textContent=money(t.total);
-  descuentoMonto.textContent=`Descuento aplicado: ${money(t.descuento)}`;
-});
-
 // 💵 Calcular cambio automáticamente
-const montoRecibido=$("#montoRecibido");
-const montoCambio=$("#montoCambio");
-montoRecibido.addEventListener("input",()=>{
-  const valRec=parseFloat(montoRecibido.value)||0;
-  const desc=Number(descuentoInput.value)||0;
-  const tot=calcularTotales(desc);
-  const cambio=valRec - tot.total;
-  montoCambio.textContent=money(cambio>0?cambio:0);
+montoRecibido.addEventListener("input", () => {
+  const valRec = parseFloat(montoRecibido.value) || 0;
+  const tot = calcularTotales(descuentoAutorizado);
+  const cambio = valRec - tot.total;
+  montoCambio.textContent = money(cambio > 0 ? cambio : 0);
 });
+
+// 🔐 Aplicar descuento con contraseña “MADERO690*”
+$("#btnSolicitarDescuento").addEventListener("click", async () => {
+  const porcStr = prompt("Introduce el descuento (%)");
+  const porc = parseFloat(porcStr);
+  if (isNaN(porc) || porc <= 0 || porc > 100) {
+    alert("Porcentaje inválido."); return;
+  }
+
+  const pass = prompt("Introduce la contraseña de autorización");
+  const CLAVE_DESCUENTO = "MADERO690*";
+
+  if (pass !== CLAVE_DESCUENTO) {
+    alert("❌ Contraseña incorrecta. No se aplicó el descuento.");
+    return;
+  }
+
+  descuentoAutorizado = porc;
+  const tot = calcularTotales(porc);
+  cobroTotal.textContent = money(tot.total);
+  descuentoResumen.textContent = money(tot.descuento);
+  descuentoInfo.style.display = "block";
+  alert(`✅ Descuento del ${porc}% aplicado correctamente.`);
+});
+
+// ✅ Confirmar y guardar venta con o sin descuento
+$("#btnConfirmarCobro").onclick = async () => {
+  const tot = calcularTotales(descuentoAutorizado);
+  const pago = parseFloat($("#montoRecibido").value) || 0;
+  const cambio = pago - tot.total;
+
+  const folio = "VENTA-" + Date.now();
+
+  const venta = {
+    folio,
+    rutaId,
+    cliente: $("#cliente").value || "PÚBLICO EN GENERAL",
+    cortado: false,
+    descuento_porcentaje: descuentoAutorizado,
+    descuento_monto: tot.descuento,
+    resumen_financiero: tot,
+    fecha: serverTimestamp(),
+    fecha_txt: new Date().toLocaleString("es-MX", { hour12: true }),
+    usuarioId: USUARIO_LOGUEADO?.id || "",
+    usuarioNombre: USUARIO_LOGUEADO?.nombre || "",
+    notas: $("#notasCobro").value || "",
+    autorizado_por: descuentoAutorizado > 0 ? "Gerente autorizado" : null
+  };
+
+  await guardarVentaEnFirestore(venta);
+  enviarTelegram(venta);
+  rellenarTicket(venta);
+  imprimirTicketEstilado();
+  carrito = [];
+  render();
+  cerrarCobro();
+};
+
 
 /* ===========================================================
    ✅ SECCIÓN 12: CONFIRMAR Y GUARDAR VENTA
